# bbnf-language-support

./: .gitignore  .vscodeignore  LICENSE.md  Makefile  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: extension.ts  index.ts  parser.ts
client/test/: eebnf.out.ebnf  test.test.ts
extension/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/syntaxes/: bbnf.tmLanguage.json  inlineLanguageString.tmLanguage.json
extension/test/: test.test.ts
grammar/: BBNF.md  bbnf.bbnf  bbnf.out  css-keyframes.bbnf  eebnf.ebnf  json.ebnf  tmp.input.ebnf  tmp.output.bbnf
prettier-plugin-bbnf/: package.json  tsconfig.json  vite.config.ts
rust/: Cargo.toml
rust/lsp/: Cargo.toml
rust/lsp/src/: analysis.rs  main.rs  server.rs  state.rs
rust/lsp/src/features/: code_actions.rs  code_lens.rs  completion.rs  document_symbols.rs  folding.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs
rust/lsp/tests/: bench_lsp.rs  integration.rs
server/: package-lock.json  package.json
src/: a.ts.t  extension.ts  index.ts  parser.ts  printer.ts
syntaxes/: bbnf.tmLanguage.json
test/: eebnf.out.ebnf  formatted.out.ebnf  test.bench.ts  test.test.ts  utils.ts
typescript/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+22 files in other folders)
